recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:9: error: Double does not take parameters
    droite(angle())
                ^Tree:16: error: value length is not a member of Double
      recule(shrink.length)
                    ^