recursion.logo.lessons.recursion.logo.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
  val x = getX()
  val y = getY()
  avance(length)
  if(getX() == x && getY() == y){
    return
  }
  else{
    droite(angle())
    if(steps < 3 && steps >=0){
      current(steps)
      avance(shrink*length)
      droite(angle)
      return tree(steps+1,length,angle,shrink+shrink)
    }else{
      recule(shrink.length)
      gauche(2*angle)
      return tree(steps-1,length,angle,shrink-shrink)
    }
  }
}